[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.4.10", features = ["derive"] }
reqwest = {version="0.11.22",features=["blocking","json","cookies"]}
num = "0.4.0"
aoc2023 = { git = "https://github.com/jamespettigrew/advent_of_code_2023", branch = "main"}

